--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<h5>Задание: <p>Привет. Вам нужно запросить у пользователя возраст. Добавить условие при котором возраст будет выводиться с правильным словом: "год", "года" или "лет". Т.е. "29 лет" или "4 года"</p></h5>
 	<script type="text/javascript">
 		var years = prompt('Сколько вам лет?', '');
+		alert(years)
 		console.log(typeof(years));
 		Number(years);
 		console.log(years);
@@ -15,11 +16,7 @@
 		if ( years == 1 || years == 21 || years == 31 || years == 41) {
 			alert(years + ' год')
 		}
-		else if ( 
-			years  == 5 || years == 6 || years == 7 || years == 8 || years == 9 || years == 10 || years == 11 || years == 12 || years == 13 || years == 14 || 
-			years == 15 ||  years == 16 ||  years == 17 || years == 18 || years == 19 || years == 20 || years == 25 ||  years == 26 || years == 27 || 
-			years == 28 || years == 29 || years == 30 || 
-			years > 45 ) 
+		else if ( years > 4 && years < 21 || years > 24 && years < 31 || years > 45  ) 
 		{
  			alert('Вам ' + years + ' лет');
  }
@@ -30,7 +27,10 @@
 		// 	alert(years + ' лет' )
 		// }
 
-
+// years  == 5 || years == 6 || years == 7 || years == 8 || years == 9 || years == 10 || years == 11 || years == 12 || years == 13 || years == 14 || 
+// 			years == 15 ||  years == 16 ||  years == 17 || years == 18 || years == 19 || years == 20 || years == 25 ||  years == 26 || years == 27 || 
+// 			years == 28 || years == 29 || years == 30 || 
+// 			years > 45
 
 
 // 		if( years === '1','21','31','41' ) {
